--- a/mobile/src/main/res/layout/activity_choice.xml
+++ b/mobile/src/main/res/layout/activity_choice.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
-    <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listView"
-            android:minHeight="20dp"
-            android:background="@drawable/background_repeat"/>
+        android:id="@+id/listView"
+        android:minHeight="20dp"
+        android:background="@drawable/background_repeat" />
 </RelativeLayout>
