--- a/mobile/src/main/res/layout/widget_layout.xml
+++ b/mobile/src/main/res/layout/widget_layout.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
-            android:layout_height="match_parent"
-            android:layout_width="5dp"
-            android:id="@+id/orangeImage"
-            android:background="#FF8800"
-            />
+        android:layout_height="match_parent"
+        android:layout_width="5dp"
+        android:id="@+id/orangeImage"
+        android:background="#FF8800" />
 
-<ListView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toRightOf="@+id/orangeImage"
         android:id="@+id/listView"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:background="@drawable/background_repeat"
-        />
+        android:background="@drawable/background_repeat" />
 
 
 </RelativeLayout>
