--- a/mobile/src/main/res/layout/activity_choice_list_item.xml
+++ b/mobile/src/main/res/layout/activity_choice_list_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/activityPathTextView"
         android:layout_toRightOf="@+id/imageView"
         android:layout_alignParentTop="true"
-        android:textAppearance="@android:style/TextAppearance.Holo.Small"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textSize="10dp"
         android:layout_marginLeft="5dp"
         android:paddingTop="5dp"
