--- a/mobile/src/main/res/values/devdrawertheme_styles.xml
+++ b/mobile/src/main/res/values/devdrawertheme_styles.xml
@@ -19,7 +19,7 @@
         <item name="android:background">@drawable/btn_default_holo_light</item>
     </style>
 
-    <style name="AutoCompleteDevDrawerTheme" parent="android:Widget.Holo.Light.AutoCompleteTextView">
+    <style name="AutoCompleteDevDrawerTheme" parent="Widget.AppCompat.Light.AutoCompleteTextView">
         <item name="android:dropDownSelector">@drawable/list_selector_holo_light</item>
         <item name="android:background">@drawable/edit_text_holo_light</item>
         <item name="android:textColor">#333333</item>
