--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="app_name_light">#333333</color>
     <color name="app_name_dark">#EBEBEB</color>
+
+    <color name="primary">#fff1710e</color>
+    <color name="primary_dark">#ffca5710</color>
 </resources>
