--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -3,17 +3,12 @@
 
     <style name="Theme.DevDrawer" parent="Theme.AppCompat.Light.DarkActionBar">
 
-        <!--<item name="colorPrimary">@color/primary</item>-->
-        <!--<item name="colorPrimaryDark">@color/primary_dark</item>-->
-        <!--<item name="colorAccent">@color/accent</item>-->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">?colorPrimary</item>
 
-        <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Dark</item>
-
-        <!--<item name="actionBarStyle">@style/Widget.Styled.ActionBar</item>-->
-        <!--<item name="android:actionBarStyle">@style/Widget.Styled.ActionBar</item>-->
+        <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="windowActionBar">true</item>
-        <!--<item name="android:windowBackground">@color/background</item>-->
-
     </style>
 
 </resources>
